update some bounds and positions

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,7 @@
 	width: 150px;
 	margin: 0 20px;
 	text-align: left;
+	vertical-align: top;
 }
 
 .enterprise-data{
@@ -211,6 +212,11 @@
 }
 
 #main-footer{
+	width: 960px;
 	padding-left: 20px;
 	color: #74B8A9;
+}
+
+.hr-footer{
+	width: 960px;
 }
